--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,7 @@ canvas {
   padding: 1em;
   transition: transform 0.8s ease-in-out;
   transform: translateX(34em);
+  margin-bottom: 3em;
 }
 .contribution-is-active {
   transform: translateX(0);
@@ -147,4 +148,28 @@ a:hover #name::before {
   background-color: #ffffff;
   width: 3rem;
   cursor: url("/pointer.svg"), default;
+}
+
+@media screen and (max-width: 600px) {
+  .app-name {
+    font-size: 2.5rem;
+    margin: 1rem;
+  }
+  .app-name > div:last-child {
+    margin-left: 10rem;
+  }
+  .contribution-toggle-button {
+    font-size: smaller;
+  }
+  .contribution-info {
+    font-size: smaller;
+    width: 20em;
+    transform: translateX(24em);
+  }
+  .contribution-toggle-active {
+    transform: translateX(-23em);
+  }
+  .contribution-is-active {
+    transform: translateX(0em);
+  }
 }
